// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Counter /> matches snapshot 1`] = `
<div>
  <h2>
    0
  </h2>
  <button
    onClick={[Function]}
  >
    +1
  </button>
  <button
    onClick={[Function]}
  >
    -1
  </button>
</div>
`;

exports[`<Counter /> matches snapshot 2`] = `
<div>
  <div>
    <h2>
      0
    </h2>
    <button>
      +1
    </button>
    <button>
      -1
    </button>
  </div>
</div>
`;
